--- a/test/index.html
+++ b/test/index.html
@@ -19,7 +19,7 @@
       <h1>Hello World!</h1>
     </div>
   </body>
-  <script src="../src/index.js"></script>
+  <script src="../dist/framelessframe.js"></script>
   <script>
     // You can also require other files to run in this process
     require('./renderer.js')
